distros/D/Date/clib/src/panda/date/strptime.cc

#line 1 "src/panda/date/strptime.rl"
#include "Date.h"
#include <string.h>

#define NSAVE(dest) { dest = acc; acc = 0; }

enum class WeekInterpretation { none = 2, iso = 1, monday = 0, sunday = -7 };

namespace panda { namespace date {

struct MetaConsume {
    int cs;
    int consumed;
};

struct TZInfo {
    char rule[14];
    int  len = 0;
};



#line 121 "src/panda/date/strptime.rl"



#line 29 "src/panda/date/strptime.cc"
static const int parser_start = 185;
static const int parser_first_final = 185;
static const int parser_error = 0;

static const int parser_en_p_AMPM = 1;
static const int parser_en_p_ampm = 4;
static const int parser_en_p_sec = 7;
static const int parser_en_p_min = 9;
static const int parser_en_p_hour = 11;
static const int parser_en_p_hour_s = 13;
static const int parser_en_p_hour_min = 15;
static const int parser_en_p_hms = 20;
static const int parser_en_p_hmsAMPM = 28;
static const int parser_en_p_mdy = 40;
static const int parser_en_p_ymd = 48;
static const int parser_en_p_mdyhms = 58;
static const int parser_en_p_day = 75;
static const int parser_en_p_day3 = 77;
static const int parser_en_p_day_s = 80;
static const int parser_en_p_wday = 82;
static const int parser_en_p_wday_s = 83;
static const int parser_en_p_wname = 84;
static const int parser_en_p_wnum = 119;
static const int parser_en_p_month = 121;
static const int parser_en_p_mname = 123;
static const int parser_en_p_year = 169;
static const int parser_en_p_yr = 173;
static const int parser_en_p_cent = 175;
static const int parser_en_p_epoch = 177;
static const int parser_en_p_tz_num = 178;
static const int parser_en_p_tz_name = 183;
static const int parser_en_p_perc = 184;
static const int parser_en_p_space = 185;


#line 124 "src/panda/date/strptime.rl"

static inline int _parse_str(int cs, const char* p, const char* pe, int& week, datetime& _date, ptime_t& epoch_, TZInfo& tzi, const char*& tz_b, const char*& tz_e)  {
    // printf("_parse_str cs=%d\n", cs);
    const char* pb  = p;
    const char* eof = pe;
    uint64_t    acc = 0;

    
#line 74 "src/panda/date/strptime.cc"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
st185:
	if ( ++p == pe )
		goto _test_eof185;
case 185:
	if ( (*p) == 32 )
		goto st185;
	goto st0;
st0:
cs = 0;
	goto _out;
case 1:
	switch( (*p) ) {
		case 65: goto st2;
		case 80: goto st3;
	}
	goto st0;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	if ( (*p) == 77 )
		goto tr3;
	goto st0;
tr3:
#line 42 "src/panda/date/strptime.rl"
	{ {p++; cs = 186; goto _out;} }
	goto st186;
tr4:
#line 34 "src/panda/date/strptime.rl"
	{ _date.hour += 12;         }
#line 42 "src/panda/date/strptime.rl"
	{ {p++; cs = 186; goto _out;} }
	goto st186;
st186:
	if ( ++p == pe )
		goto _test_eof186;
case 186:
#line 117 "src/panda/date/strptime.cc"
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) == 77 )
		goto tr4;
	goto st0;
case 4:
	switch( (*p) ) {
		case 97: goto st5;
		case 112: goto st6;
	}
	goto st0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) == 109 )
		goto tr7;
	goto st0;
tr7:
#line 42 "src/panda/date/strptime.rl"
	{ {p++; cs = 187; goto _out;} }
	goto st187;
tr8:
#line 34 "src/panda/date/strptime.rl"
	{ _date.hour += 12;         }
#line 42 "src/panda/date/strptime.rl"
	{ {p++; cs = 187; goto _out;} }
	goto st187;
st187:
	if ( ++p == pe )
		goto _test_eof187;
case 187:
#line 153 "src/panda/date/strptime.cc"
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) == 109 )
		goto tr8;
	goto st0;
case 7:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr9;
	goto st0;
tr9:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st8;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
#line 177 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr10;
	goto st0;
tr10:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 31 "src/panda/date/strptime.rl"
	{ NSAVE(_date.sec);         }
#line 42 "src/panda/date/strptime.rl"
	{ {p++; cs = 188; goto _out;} }
	goto st188;
st188:
	if ( ++p == pe )
		goto _test_eof188;
case 188:
#line 196 "src/panda/date/strptime.cc"
	goto st0;
case 9:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr11;
	goto st0;
tr11:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
#line 213 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr12;
	goto st0;
tr12:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 32 "src/panda/date/strptime.rl"
	{ NSAVE(_date.min);         }
#line 42 "src/panda/date/strptime.rl"
	{ {p++; cs = 189; goto _out;} }
	goto st189;
st189:
	if ( ++p == pe )
		goto _test_eof189;
case 189:
#line 232 "src/panda/date/strptime.cc"
	goto st0;
case 11:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr13;
	goto st0;
tr13:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st12;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
#line 249 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr14;
	goto st0;
tr14:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 33 "src/panda/date/strptime.rl"
	{ NSAVE(_date.hour);        }
#line 42 "src/panda/date/strptime.rl"
	{ {p++; cs = 190; goto _out;} }
	goto st190;
st190:
	if ( ++p == pe )
		goto _test_eof190;
case 190:
#line 268 "src/panda/date/strptime.cc"
	goto st0;
case 13:
	if ( (*p) == 32 )
		goto st14;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr16;
	goto st0;
tr16:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st14;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
#line 287 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr17;
	goto st0;
tr17:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 33 "src/panda/date/strptime.rl"
	{ NSAVE(_date.hour);        }
#line 42 "src/panda/date/strptime.rl"
	{ {p++; cs = 191; goto _out;} }
	goto st191;
st191:
	if ( ++p == pe )
		goto _test_eof191;
case 191:
#line 306 "src/panda/date/strptime.cc"
	goto st0;
case 15:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr18;
	goto st0;
tr18:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st16;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
#line 323 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr19;
	goto st0;
tr19:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 33 "src/panda/date/strptime.rl"
	{ NSAVE(_date.hour);        }
	goto st17;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
#line 340 "src/panda/date/strptime.cc"
	if ( (*p) == 58 )
		goto st18;
	goto st0;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr21;
	goto st0;
tr21:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st19;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
#line 362 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr22;
	goto st0;
tr22:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 32 "src/panda/date/strptime.rl"
	{ NSAVE(_date.min);         }
#line 42 "src/panda/date/strptime.rl"
	{ {p++; cs = 192; goto _out;} }
	goto st192;
st192:
	if ( ++p == pe )
		goto _test_eof192;
case 192:
#line 381 "src/panda/date/strptime.cc"
	goto st0;
case 20:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr23;
	goto st0;
tr23:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st21;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
#line 398 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr24;
	goto st0;
tr24:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 33 "src/panda/date/strptime.rl"
	{ NSAVE(_date.hour);        }
	goto st22;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
#line 415 "src/panda/date/strptime.cc"
	if ( (*p) == 58 )
		goto st23;
	goto st0;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr26;
	goto st0;
tr26:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st24;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
#line 437 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr27;
	goto st0;
tr27:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 32 "src/panda/date/strptime.rl"
	{ NSAVE(_date.min);         }
	goto st25;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
#line 454 "src/panda/date/strptime.cc"
	if ( (*p) == 58 )
		goto st26;
	goto st0;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr29;
	goto st0;
tr29:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st27;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
#line 476 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr30;
	goto st0;
tr30:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 31 "src/panda/date/strptime.rl"
	{ NSAVE(_date.sec);         }
#line 42 "src/panda/date/strptime.rl"
	{ {p++; cs = 193; goto _out;} }
	goto st193;
st193:
	if ( ++p == pe )
		goto _test_eof193;
case 193:
#line 495 "src/panda/date/strptime.cc"
	goto st0;
case 28:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr31;
	goto st0;
tr31:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st29;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
#line 512 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr32;
	goto st0;
tr32:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 33 "src/panda/date/strptime.rl"
	{ NSAVE(_date.hour);        }
	goto st30;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
#line 529 "src/panda/date/strptime.cc"
	if ( (*p) == 58 )
		goto st31;
	goto st0;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr34;
	goto st0;
tr34:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st32;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
#line 551 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr35;
	goto st0;
tr35:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 32 "src/panda/date/strptime.rl"
	{ NSAVE(_date.min);         }
	goto st33;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
#line 568 "src/panda/date/strptime.cc"
	if ( (*p) == 58 )
		goto st34;
	goto st0;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr37;
	goto st0;
tr37:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st35;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
#line 590 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr38;
	goto st0;
tr38:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 31 "src/panda/date/strptime.rl"
	{ NSAVE(_date.sec);         }
	goto st36;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
#line 607 "src/panda/date/strptime.cc"
	if ( (*p) == 32 )
		goto st37;
	goto st0;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
	switch( (*p) ) {
		case 32: goto st37;
		case 65: goto st38;
		case 80: goto st39;
	}
	goto st0;
st38:
	if ( ++p == pe )
		goto _test_eof38;
case 38:
	if ( (*p) == 77 )
		goto tr42;
	goto st0;
tr42:
#line 42 "src/panda/date/strptime.rl"
	{ {p++; cs = 194; goto _out;} }
	goto st194;
tr43:
#line 34 "src/panda/date/strptime.rl"
	{ _date.hour += 12;         }
#line 42 "src/panda/date/strptime.rl"
	{ {p++; cs = 194; goto _out;} }
	goto st194;
st194:
	if ( ++p == pe )
		goto _test_eof194;
case 194:
#line 642 "src/panda/date/strptime.cc"
	goto st0;
st39:
	if ( ++p == pe )
		goto _test_eof39;
case 39:
	if ( (*p) == 77 )
		goto tr43;
	goto st0;
case 40:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr44;
	goto st0;
tr44:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st41;
st41:
	if ( ++p == pe )
		goto _test_eof41;
case 41:
#line 666 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr45;
	goto st0;
tr45:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 41 "src/panda/date/strptime.rl"
	{ _date.mon = acc - 1; acc = 0; }
	goto st42;
st42:
	if ( ++p == pe )
		goto _test_eof42;
case 42:
#line 683 "src/panda/date/strptime.cc"
	if ( (*p) == 47 )
		goto st43;
	goto st0;
st43:
	if ( ++p == pe )
		goto _test_eof43;
case 43:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr47;
	goto st0;
tr47:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st44;
st44:
	if ( ++p == pe )
		goto _test_eof44;
case 44:
#line 705 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr48;
	goto st0;
tr48:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 35 "src/panda/date/strptime.rl"
	{ NSAVE(_date.mday);        }
	goto st45;
st45:
	if ( ++p == pe )
		goto _test_eof45;
case 45:
#line 722 "src/panda/date/strptime.cc"
	if ( (*p) == 47 )
		goto st46;
	goto st0;
st46:
	if ( ++p == pe )
		goto _test_eof46;
case 46:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr50;
	goto st0;
tr50:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st47;
st47:
	if ( ++p == pe )
		goto _test_eof47;
case 47:
#line 744 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr51;
	goto st0;
tr51:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 44 "src/panda/date/strptime.rl"
	{
        if (acc <= 50) _date.year = 2000 + acc;
        else           _date.year = 1900 + acc;
        acc = 0;
    }
#line 42 "src/panda/date/strptime.rl"
	{ {p++; cs = 195; goto _out;} }
	goto st195;
st195:
	if ( ++p == pe )
		goto _test_eof195;
case 195:
#line 767 "src/panda/date/strptime.cc"
	goto st0;
case 48:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr52;
	goto st0;
tr52:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st49;
st49:
	if ( ++p == pe )
		goto _test_eof49;
case 49:
#line 784 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr53;
	goto st0;
tr53:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st50;
st50:
	if ( ++p == pe )
		goto _test_eof50;
case 50:
#line 799 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr54;
	goto st0;
tr54:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
	goto st51;
st51:
	if ( ++p == pe )
		goto _test_eof51;
case 51:
#line 814 "src/panda/date/strptime.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr55;
	goto st0;
tr55:
#line 24 "src/panda/date/strptime.rl"
	{
        acc *= 10;
        acc += (*p) - '0';
    }
#line 30 "src/panda/date/strptime.rl"
	{ NSAVE(_date.year);        }
	goto st52;
st52:
	if ( ++p == pe )
		goto _test_eof52;
case 52:
#line 831 "src/panda/date/strptime.cc"
	if ( (*p) == 45 )
		goto st53;
	goto st0;
st53:
	if ( ++p == pe )
		goto _test_eof53;
case 53:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr57;
	goto st0;
tr57:
